--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,39 @@
+
+/*----------Variables---------------*/
 :root {
+    /* colors */
+    --color_primary: #111A2C;
+    --color_light: #59758d;
+    --color_secondary: #048B70;
+    --color_secondary_dark: #06230B;
+    --color-light: #07DAAF;
+    --color-shadow: #0002;
+    --white-color:#fff;
     --black: #000000;
     --white: #FFFFFF;
     --primary: #0000FF
+
+    /* Font Style*/
+    --main-font: "Wix Madefor Text", sans-serif;;
+    --secondary-font: "Rubik Scribble", system-ui;
+    --thirdly-font: "Workbench", sans-serif;
+    --fourth-font: "Archivo Black", sans-serif;
+
+    /* positioning */
+    --banner--large: 50vh;
+    --horizontal: flex-start;
+    --vertical: center;
+    --align--text: left;
+}
+
+html {
+    background-color: var(--color_secondary_dark);
 }
 
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #f8f9fa;
+    background-color: var(--color_secondary_dark);
 }
 
 .container {
@@ -26,7 +52,10 @@ body {
     font-size: 36px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+    color: white;
 }
+
+
 
 .navbar {
     display: flex;
@@ -37,10 +66,11 @@ body {
 .navb-items {
     font-size: 18px;
     text-align: center;
+    color: white;
 }
 
 .btn {
-    background-color: var(--primary);
+    background-color: var(--color-light);
     color: var(--white);
     font-size: 16px;
     font-weight: bold;
@@ -82,12 +112,9 @@ body {
     padding-bottom: 2rem;
 }
 
-/* .text-results__area {
-    position: relative;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    margin-bottom: 1rem;
-} */
+.text-results {
+    color: white;
+}
 
 .select-field {
     position: absolute;
